--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@
     
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#">+123-456-7890</a>
-                <a href="#">example@gmail.com</a>
-                <a href="#">mumbai, india - 400104</a>
+                <a href="#">+351 920 592 055</a>
+                <a href="#">gabrieltuzzo@hotmail.com</a>
+                <a href="#">Maia, Porto Portugal</a>
                 <img src="images/payment.png" alt="">
             </div>
     
