--- a/index.html
+++ b/index.html
@@ -471,7 +471,9 @@
         <div class="credit"> created by <a class="creator" href="https://gabrieltuzzo.github.io/personal-portifolio/" target="_Blank"> Gabriel Tuzzo</a> | all rights reserved </div>
     
     </section>
-    
     <!-- footer section ends -->
+
+    <script src="index.js"></script>
+
 </body>
 </html>
