--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
     
     </section>
     <!-- footer section ends -->
-
-    <script src="index.js"></script>
+    
+    <script src="form.js"></script>
 
 </body>
 </html>
